frontend/src/scss/PrimeStyles.scss
/* ... */
.sr-time-of-test-buttons-footer {
  text-align: right;
}

.modal__footer--sticky {
  bottom: units(7);
  z-index: 1;
}

[aria-label="Test questionnaire"] {
  margin: units(5) 0;
  max-height: stretch;
  width: units("tablet");
}

@-moz-document url-prefix() {
  [aria-label="Test questionnaire"] {
    max-height: calc(100vh - #{units(10)});
  }
}

.patient-app--landing {
  [data-icon="check-circle"] {
    font-size: units(5);

    path {
      fill: color("green-cool-50v");
    }
  }
}

.tag--new {
  background-color: color("green-cool-50v");
}

.usa-form-group--error {
  margin-top: units(3);
}

.tos-content {
  h2 {
    font-size: size("body", "md");
  }

  h3 {
    font-size: size("body", "sm");
  }
}

.maxw-prose {
  max-width: 68ex;
}

.sr-training-banner {
  background-color: #e7f6f8;
  .usa-alert {
    margin-left: -2rem;
  }
}

.sr-training-modal {
  ul {
    margin-bottom: 0;
    li {
      margin: 0.5em 0;
    }
  }
}

